plugins {
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.freefair.lombok" version "8.1.0"
    id 'java-library'
    id 'idea'
}

bootJar {
    archiveBaseName = 'laurel-book-database'
}

version = '4.6.1'

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.1.1'
    implementation 'org.springframework:spring-jdbc:6.0.10'
    implementation 'org.springframework:spring-websocket:6.0.10'

    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
    implementation 'com.zaxxer:HikariCP:5.0.1'

    implementation 'com.github.jiconfont:jiconfont-swing:1.0.1'
    implementation 'com.github.jiconfont:jiconfont-font_awesome:4.7.0.1'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

    implementation 'org.apache.poi:poi:5.2.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.2'

    implementation 'commons-io:commons-io:2.13.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
}

ext {
    set('snakeyaml.version','2.0')
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
}
